--- a/WebContent/css/ballot.css
+++ b/WebContent/css/ballot.css
@@ -14,7 +14,7 @@
 }
 
 body {
-    background-color: #9FA8DA;
+    background-color: #FFAE00;
 }
 .listNum {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
