--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -5,16 +5,14 @@
 }
 #form-wrapper{
 
-    width: 80%;           /* Set this to your convenience */
     height: 100%;        /* Set this to your convenience */
     position: fixed;
     margin: 0 auto;
-    /*margin-top: -384px;     !* Half of height *!
-    margin-left: -512px;     !* Half of width *!*/
     top:0;
-    left:0;
     bottom:0;
-    right:0;
+    background-color: #eee;
+    left: 80px;
+    right: 80px;
 }
 body {
     background-color: #FFAE00;
