--- a/WebContent/css/result.css
+++ b/WebContent/css/result.css
@@ -3,9 +3,13 @@
     padding: 15px;
     -webkit-border-image: url(border.png) 30 round; /* Safari 3.1-5 */
     -o-border-image: url(border.png) 30 round; /* Opera 11-12.1 */
-    border-image: url("C:/Users/skind/Desktop/border.png") 30 round;
+    border-image: url("/voting/images/border.png") 30 round;
+    
 }
 .w3-myFont {
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	font-size: 48px;
+}
+.header-img {
+	margin: 10 10;
 }
