--- a/WebContent/css/footer.css
+++ b/WebContent/css/footer.css
@@ -1,7 +1,7 @@
 .footer footer {
-	position: fixed;
+	position: absolute;
 	bottom: 30px;
 	width: 100%;
-	font-size: larger;
+	font-size: 1vw;
 	text-align: center;
 }
