--- a/WebContent/css/ballot.css
+++ b/WebContent/css/ballot.css
@@ -116,6 +116,21 @@ hr {
 	
 }
 
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 60%;
+    border-radius: 5px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+img {
+    border-radius: 5px 5px 0 0;
+}
+
 /* .button input[type=button] {
     padding: 10px 15px 11px !important;
 	font-size: 18px !important;
@@ -157,3 +172,4 @@ input[type=submit]:hover {
     background-color:rgba(255,204,0,0.8);
 }
  */
+ 
