--- a/WebContent/css/footer.css
+++ b/WebContent/css/footer.css
@@ -1,7 +1,10 @@
-.footer footer {
-	position: absolute;
-	bottom: 30px;
-	width: 100%;
-	font-size: 1vw;
-	text-align: center;
+.footer {
+	
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 2rem;
+  text-align: center;
+  
 }
