--- a/WebContent/css/ballot.css
+++ b/WebContent/css/ballot.css
@@ -1,16 +1,20 @@
+body {
+	min-height: 2000px;
+	padding-top: 70px;
+}
 .header-page {
 	text-align: -webkit-center;
 	font-size: 4em;
 }
 
 #form-wrapper {
-	width: 100%; /* Set this to your convenience */
+	width: 90%; /* Set this to your convenience */
 	height: 100%; /* Set this to your convenience */
 	margin: 0 auto;
 	top: 0;
-	left: 0;
+	left: 5%;
 	bottom: 0;
-	right: 0;
+	right: 5%;
 }
 
 .listNum {
@@ -37,10 +41,6 @@
 
 img {
 	border-radius: 5px 5px 0 0;
-}
-
-.container {
-	background: linear-gradient(to top, #ffae00 0%, #ffe5ad 100%);
 }
 
 /* Change the font-family for card container */
