--- a/WebContent/css/footer.css
+++ b/WebContent/css/footer.css
@@ -1,10 +1,9 @@
 .footer {
-	
-  position: fixed;
+  
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 2rem;
   text-align: center;
   
 }
